[package]
name = "bench-deserialization"
version = "0.1.0"
edition = "2021"

[dependencies]
deser-hjson = { path = "../deser-hjson" }
#deser-hjson = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = { version = "0.1" }
rand = { version ="0.8", features = ["std_rng"] }
pretty_assertions = "1.4"
lazy_static = "1.4.0"
toml = "0.8"
json5 = "0.4"
